@@ -1,3 +1,8 @@
+2002-11-04  Adam Fedor  <fedor@gnu.org>
+
+	* PCFileManager.m (-showAddFileWindow): Only copy file if it isn't
+	already there.
+
 2002-10-06 15:45  probert
 
 	* PCEditor.h, PCEditor.m, PCEditorView.m, PCProjectEditor.h,
